cluster/kubernetes/apps/kguardian/kguardian/app/httproute.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app kguardian
  annotations:
    gethomepage.dev/name: *app
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/group: observability
    gethomepage.dev/icon: mdi-close-network-#ffffff
spec:
  hostnames:
    - kguardian.stevewm.dev
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: kguardian-frontend
          namespace: kguardian
          port: 5173
